--- a/main_cnn.ipynb
+++ b/main_cnn.ipynb
@@ -10,7 +10,7 @@
     "import torch.optim as optim\n",
     "\n",
     "from utils.data import get_dataloaders\n",
-    "from utils.train import train, test, get_device\n",
+    "from utils.train import train, test, get_device, set_seed\n",
     "from utils.vis import get_predictions_examples\n",
     "from model.CNN import CNN\n"
    ]
@@ -43,10 +43,30 @@
     {
      "data": {
       "text/plain": [
-       "(938, 1)"
+       "42"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(938, 1)"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +97,7 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +131,7 @@
        " ))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,113 +144,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10], Step [93/938], Loss: 0.8745\n",
-      "Epoch [1/10], Step [186/938], Loss: 0.4989\n",
-      "Epoch [1/10], Step [279/938], Loss: 0.4445\n",
-      "Epoch [1/10], Step [372/938], Loss: 0.4229\n",
-      "Epoch [1/10], Step [465/938], Loss: 0.3905\n",
-      "Epoch [1/10], Step [558/938], Loss: 0.3878\n",
-      "Epoch [1/10], Step [651/938], Loss: 0.3396\n",
-      "Epoch [1/10], Step [744/938], Loss: 0.3295\n",
-      "Epoch [1/10], Step [837/938], Loss: 0.3155\n",
-      "Epoch [1/10], Step [930/938], Loss: 0.3060\n",
-      "Epoch [2/10], Step [93/938], Loss: 0.3064\n",
-      "Epoch [2/10], Step [186/938], Loss: 0.2805\n",
-      "Epoch [2/10], Step [279/938], Loss: 0.2949\n",
-      "Epoch [2/10], Step [372/938], Loss: 0.2660\n",
-      "Epoch [2/10], Step [465/938], Loss: 0.2978\n",
-      "Epoch [2/10], Step [558/938], Loss: 0.2723\n",
-      "Epoch [2/10], Step [651/938], Loss: 0.2912\n",
-      "Epoch [2/10], Step [744/938], Loss: 0.2730\n",
-      "Epoch [2/10], Step [837/938], Loss: 0.2605\n",
-      "Epoch [2/10], Step [930/938], Loss: 0.2551\n",
-      "Epoch [3/10], Step [93/938], Loss: 0.2413\n",
-      "Epoch [3/10], Step [186/938], Loss: 0.2314\n",
-      "Epoch [3/10], Step [279/938], Loss: 0.2425\n",
-      "Epoch [3/10], Step [372/938], Loss: 0.2463\n",
-      "Epoch [3/10], Step [465/938], Loss: 0.2323\n",
-      "Epoch [3/10], Step [558/938], Loss: 0.2186\n",
-      "Epoch [3/10], Step [651/938], Loss: 0.2163\n",
-      "Epoch [3/10], Step [744/938], Loss: 0.2188\n",
-      "Epoch [3/10], Step [837/938], Loss: 0.2258\n",
-      "Epoch [3/10], Step [930/938], Loss: 0.2342\n",
-      "Epoch [4/10], Step [93/938], Loss: 0.1849\n",
-      "Epoch [4/10], Step [186/938], Loss: 0.2131\n",
-      "Epoch [4/10], Step [279/938], Loss: 0.2029\n",
-      "Epoch [4/10], Step [372/938], Loss: 0.1983\n",
-      "Epoch [4/10], Step [465/938], Loss: 0.1875\n",
-      "Epoch [4/10], Step [558/938], Loss: 0.2032\n",
-      "Epoch [4/10], Step [651/938], Loss: 0.1915\n",
-      "Epoch [4/10], Step [744/938], Loss: 0.2143\n",
-      "Epoch [4/10], Step [837/938], Loss: 0.1910\n",
-      "Epoch [4/10], Step [930/938], Loss: 0.2107\n",
-      "Epoch [5/10], Step [93/938], Loss: 0.1598\n",
-      "Epoch [5/10], Step [186/938], Loss: 0.1660\n",
-      "Epoch [5/10], Step [279/938], Loss: 0.1722\n",
-      "Epoch [5/10], Step [372/938], Loss: 0.1827\n",
-      "Epoch [5/10], Step [465/938], Loss: 0.1610\n",
-      "Epoch [5/10], Step [558/938], Loss: 0.1708\n",
-      "Epoch [5/10], Step [651/938], Loss: 0.1851\n",
-      "Epoch [5/10], Step [744/938], Loss: 0.1716\n",
-      "Epoch [5/10], Step [837/938], Loss: 0.1733\n",
-      "Epoch [5/10], Step [930/938], Loss: 0.1773\n",
-      "Epoch [6/10], Step [93/938], Loss: 0.1470\n",
-      "Epoch [6/10], Step [186/938], Loss: 0.1542\n",
-      "Epoch [6/10], Step [279/938], Loss: 0.1505\n",
-      "Epoch [6/10], Step [372/938], Loss: 0.1569\n",
-      "Epoch [6/10], Step [465/938], Loss: 0.1451\n",
-      "Epoch [6/10], Step [558/938], Loss: 0.1494\n",
-      "Epoch [6/10], Step [651/938], Loss: 0.1497\n",
-      "Epoch [6/10], Step [744/938], Loss: 0.1540\n",
-      "Epoch [6/10], Step [837/938], Loss: 0.1482\n",
-      "Epoch [6/10], Step [930/938], Loss: 0.1608\n",
-      "Epoch [7/10], Step [93/938], Loss: 0.1134\n",
-      "Epoch [7/10], Step [186/938], Loss: 0.1266\n",
-      "Epoch [7/10], Step [279/938], Loss: 0.1174\n",
-      "Epoch [7/10], Step [372/938], Loss: 0.1257\n",
-      "Epoch [7/10], Step [465/938], Loss: 0.1413\n",
-      "Epoch [7/10], Step [558/938], Loss: 0.1416\n",
-      "Epoch [7/10], Step [651/938], Loss: 0.1322\n",
-      "Epoch [7/10], Step [744/938], Loss: 0.1162\n",
-      "Epoch [7/10], Step [837/938], Loss: 0.1232\n",
-      "Epoch [7/10], Step [930/938], Loss: 0.1313\n",
-      "Epoch [8/10], Step [93/938], Loss: 0.0943\n",
-      "Epoch [8/10], Step [186/938], Loss: 0.0940\n",
-      "Epoch [8/10], Step [279/938], Loss: 0.1130\n",
-      "Epoch [8/10], Step [372/938], Loss: 0.1061\n",
-      "Epoch [8/10], Step [465/938], Loss: 0.1095\n",
-      "Epoch [8/10], Step [558/938], Loss: 0.1111\n",
-      "Epoch [8/10], Step [651/938], Loss: 0.1189\n",
-      "Epoch [8/10], Step [744/938], Loss: 0.1104\n",
-      "Epoch [8/10], Step [837/938], Loss: 0.1145\n",
-      "Epoch [8/10], Step [930/938], Loss: 0.1145\n",
-      "Epoch [9/10], Step [93/938], Loss: 0.0812\n",
-      "Epoch [9/10], Step [186/938], Loss: 0.0930\n",
-      "Epoch [9/10], Step [279/938], Loss: 0.0827\n",
-      "Epoch [9/10], Step [372/938], Loss: 0.0842\n",
-      "Epoch [9/10], Step [465/938], Loss: 0.0899\n",
-      "Epoch [9/10], Step [558/938], Loss: 0.0920\n",
-      "Epoch [9/10], Step [651/938], Loss: 0.1003\n",
-      "Epoch [9/10], Step [744/938], Loss: 0.0976\n",
-      "Epoch [9/10], Step [837/938], Loss: 0.0966\n",
-      "Epoch [9/10], Step [930/938], Loss: 0.1044\n",
-      "Epoch [10/10], Step [93/938], Loss: 0.0724\n",
-      "Epoch [10/10], Step [186/938], Loss: 0.0703\n",
-      "Epoch [10/10], Step [279/938], Loss: 0.0736\n",
-      "Epoch [10/10], Step [372/938], Loss: 0.0768\n",
-      "Epoch [10/10], Step [465/938], Loss: 0.0732\n",
-      "Epoch [10/10], Step [558/938], Loss: 0.0825\n",
-      "Epoch [10/10], Step [651/938], Loss: 0.0784\n",
-      "Epoch [10/10], Step [744/938], Loss: 0.0812\n",
-      "Epoch [10/10], Step [837/938], Loss: 0.0825\n",
-      "Epoch [10/10], Step [930/938], Loss: 0.0841\n",
+      "Epoch [1/10], Step [93/938], Loss: 0.9061\n",
+      "Epoch [1/10], Step [186/938], Loss: 0.5375\n",
+      "Epoch [1/10], Step [279/938], Loss: 0.4545\n",
+      "Epoch [1/10], Step [372/938], Loss: 0.4381\n",
+      "Epoch [1/10], Step [465/938], Loss: 0.3927\n",
+      "Epoch [1/10], Step [558/938], Loss: 0.3746\n",
+      "Epoch [1/10], Step [651/938], Loss: 0.3676\n",
+      "Epoch [1/10], Step [744/938], Loss: 0.3230\n",
+      "Epoch [1/10], Step [837/938], Loss: 0.3417\n",
+      "Epoch [1/10], Step [930/938], Loss: 0.3281\n",
+      "Epoch [2/10], Step [93/938], Loss: 0.3153\n",
+      "Epoch [2/10], Step [186/938], Loss: 0.2922\n",
+      "Epoch [2/10], Step [279/938], Loss: 0.2948\n",
+      "Epoch [2/10], Step [372/938], Loss: 0.3176\n",
+      "Epoch [2/10], Step [465/938], Loss: 0.2926\n",
+      "Epoch [2/10], Step [558/938], Loss: 0.2781\n",
+      "Epoch [2/10], Step [651/938], Loss: 0.2731\n",
+      "Epoch [2/10], Step [744/938], Loss: 0.2679\n",
+      "Epoch [2/10], Step [837/938], Loss: 0.2753\n",
+      "Epoch [2/10], Step [930/938], Loss: 0.2635\n",
+      "Epoch [3/10], Step [93/938], Loss: 0.2577\n",
+      "Epoch [3/10], Step [186/938], Loss: 0.2361\n",
+      "Epoch [3/10], Step [279/938], Loss: 0.2361\n",
+      "Epoch [3/10], Step [372/938], Loss: 0.2439\n",
+      "Epoch [3/10], Step [465/938], Loss: 0.2480\n",
+      "Epoch [3/10], Step [558/938], Loss: 0.2394\n",
+      "Epoch [3/10], Step [651/938], Loss: 0.2320\n",
+      "Epoch [3/10], Step [744/938], Loss: 0.2445\n",
+      "Epoch [3/10], Step [837/938], Loss: 0.2352\n",
+      "Epoch [3/10], Step [930/938], Loss: 0.2232\n",
+      "Epoch [4/10], Step [93/938], Loss: 0.2102\n",
+      "Epoch [4/10], Step [186/938], Loss: 0.1943\n",
+      "Epoch [4/10], Step [279/938], Loss: 0.2104\n",
+      "Epoch [4/10], Step [372/938], Loss: 0.1990\n",
+      "Epoch [4/10], Step [465/938], Loss: 0.2160\n",
+      "Epoch [4/10], Step [558/938], Loss: 0.2191\n",
+      "Epoch [4/10], Step [651/938], Loss: 0.2087\n",
+      "Epoch [4/10], Step [744/938], Loss: 0.2137\n",
+      "Epoch [4/10], Step [837/938], Loss: 0.2035\n",
+      "Epoch [4/10], Step [930/938], Loss: 0.2044\n",
+      "Epoch [5/10], Step [93/938], Loss: 0.1823\n",
+      "Epoch [5/10], Step [186/938], Loss: 0.1663\n",
+      "Epoch [5/10], Step [279/938], Loss: 0.1696\n",
+      "Epoch [5/10], Step [372/938], Loss: 0.1769\n",
+      "Epoch [5/10], Step [465/938], Loss: 0.1808\n",
+      "Epoch [5/10], Step [558/938], Loss: 0.1882\n",
+      "Epoch [5/10], Step [651/938], Loss: 0.1891\n",
+      "Epoch [5/10], Step [744/938], Loss: 0.1881\n",
+      "Epoch [5/10], Step [837/938], Loss: 0.1761\n",
+      "Epoch [5/10], Step [930/938], Loss: 0.1905\n",
+      "Epoch [6/10], Step [93/938], Loss: 0.1487\n",
+      "Epoch [6/10], Step [186/938], Loss: 0.1543\n",
+      "Epoch [6/10], Step [279/938], Loss: 0.1500\n",
+      "Epoch [6/10], Step [372/938], Loss: 0.1564\n",
+      "Epoch [6/10], Step [465/938], Loss: 0.1651\n",
+      "Epoch [6/10], Step [558/938], Loss: 0.1550\n",
+      "Epoch [6/10], Step [651/938], Loss: 0.1619\n",
+      "Epoch [6/10], Step [744/938], Loss: 0.1511\n",
+      "Epoch [6/10], Step [837/938], Loss: 0.1649\n",
+      "Epoch [6/10], Step [930/938], Loss: 0.1604\n",
+      "Epoch [7/10], Step [93/938], Loss: 0.1338\n",
+      "Epoch [7/10], Step [186/938], Loss: 0.1442\n",
+      "Epoch [7/10], Step [279/938], Loss: 0.1308\n",
+      "Epoch [7/10], Step [372/938], Loss: 0.1331\n",
+      "Epoch [7/10], Step [465/938], Loss: 0.1345\n",
+      "Epoch [7/10], Step [558/938], Loss: 0.1375\n",
+      "Epoch [7/10], Step [651/938], Loss: 0.1304\n",
+      "Epoch [7/10], Step [744/938], Loss: 0.1411\n",
+      "Epoch [7/10], Step [837/938], Loss: 0.1452\n",
+      "Epoch [7/10], Step [930/938], Loss: 0.1519\n",
+      "Epoch [8/10], Step [93/938], Loss: 0.1138\n",
+      "Epoch [8/10], Step [186/938], Loss: 0.1082\n",
+      "Epoch [8/10], Step [279/938], Loss: 0.1082\n",
+      "Epoch [8/10], Step [372/938], Loss: 0.1112\n",
+      "Epoch [8/10], Step [465/938], Loss: 0.1178\n",
+      "Epoch [8/10], Step [558/938], Loss: 0.1196\n",
+      "Epoch [8/10], Step [651/938], Loss: 0.1154\n",
+      "Epoch [8/10], Step [744/938], Loss: 0.1150\n",
+      "Epoch [8/10], Step [837/938], Loss: 0.1303\n",
+      "Epoch [8/10], Step [930/938], Loss: 0.1345\n",
+      "Epoch [9/10], Step [93/938], Loss: 0.0976\n",
+      "Epoch [9/10], Step [186/938], Loss: 0.0958\n",
+      "Epoch [9/10], Step [279/938], Loss: 0.1019\n",
+      "Epoch [9/10], Step [372/938], Loss: 0.1011\n",
+      "Epoch [9/10], Step [465/938], Loss: 0.1000\n",
+      "Epoch [9/10], Step [558/938], Loss: 0.1034\n",
+      "Epoch [9/10], Step [651/938], Loss: 0.1027\n",
+      "Epoch [9/10], Step [744/938], Loss: 0.1164\n",
+      "Epoch [9/10], Step [837/938], Loss: 0.1017\n",
+      "Epoch [9/10], Step [930/938], Loss: 0.1062\n",
+      "Epoch [10/10], Step [93/938], Loss: 0.0760\n",
+      "Epoch [10/10], Step [186/938], Loss: 0.0802\n",
+      "Epoch [10/10], Step [279/938], Loss: 0.0752\n",
+      "Epoch [10/10], Step [372/938], Loss: 0.0812\n",
+      "Epoch [10/10], Step [465/938], Loss: 0.0883\n",
+      "Epoch [10/10], Step [558/938], Loss: 0.0921\n",
+      "Epoch [10/10], Step [651/938], Loss: 0.0974\n",
+      "Epoch [10/10], Step [744/938], Loss: 0.0888\n",
+      "Epoch [10/10], Step [837/938], Loss: 0.0967\n",
+      "Epoch [10/10], Step [930/938], Loss: 0.0907\n",
       "Finished Training\n"
      ]
     },
@@ -248,19 +268,19 @@
        "   (relu3): ReLU()\n",
        "   (fc2): Linear(in_features=128, out_features=10, bias=True)\n",
        " ),\n",
-       " [0.4291040592594569,\n",
-       "  0.2797724332874899,\n",
-       "  0.23055369426001873,\n",
-       "  0.20029904234653978,\n",
-       "  0.1721609822794128,\n",
-       "  0.15181333361181623,\n",
-       "  0.126985313352952,\n",
-       "  0.10839864772571715,\n",
-       "  0.09245176690775575,\n",
-       "  0.07732740570225123])"
+       " [0.44526301901827237,\n",
+       "  0.28662430456897087,\n",
+       "  0.23931216415184647,\n",
+       "  0.20782637272053944,\n",
+       "  0.1802845614126274,\n",
+       "  0.15693524216355353,\n",
+       "  0.13835128415812817,\n",
+       "  0.11730624136052278,\n",
+       "  0.10267276787506874,\n",
+       "  0.08700206303305781])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,24 +291,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the 10000 test images: 92.09%\n",
-      "Test Loss: 0.2895\n"
+      "Accuracy of the network on the 10000 test images: 92.42%\n",
+      "Test Loss: 0.2592\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(92.09, 0.28945550322532654)"
+       "(92.42, 0.2592402398586273)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
