--- a/main_cnn_mixup.ipynb
+++ b/main_cnn_mixup.ipynb
@@ -10,7 +10,7 @@
     "import torch.optim as optim\n",
     "\n",
     "from utils.data import get_dataloaders\n",
-    "from utils.train import train_mixup, test, get_device\n",
+    "from utils.train import train_mixup, test, get_device, set_seed\n",
     "from utils.vis import get_predictions_examples\n",
     "from model.CNN import CNN\n"
    ]
@@ -43,10 +43,30 @@
     {
      "data": {
       "text/plain": [
-       "(938, 1)"
+       "42"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(938, 1)"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +97,7 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +131,7 @@
        " ))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,113 +144,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10], Step [93/938], Loss: 1.1540\n",
-      "Epoch [1/10], Step [186/938], Loss: 0.8225\n",
-      "Epoch [1/10], Step [279/938], Loss: 0.7780\n",
-      "Epoch [1/10], Step [372/938], Loss: 0.7793\n",
-      "Epoch [1/10], Step [465/938], Loss: 0.6881\n",
-      "Epoch [1/10], Step [558/938], Loss: 0.6751\n",
-      "Epoch [1/10], Step [651/938], Loss: 0.6399\n",
-      "Epoch [1/10], Step [744/938], Loss: 0.6712\n",
-      "Epoch [1/10], Step [837/938], Loss: 0.6775\n",
-      "Epoch [1/10], Step [930/938], Loss: 0.6358\n",
-      "Epoch [2/10], Step [93/938], Loss: 0.6224\n",
-      "Epoch [2/10], Step [186/938], Loss: 0.6334\n",
-      "Epoch [2/10], Step [279/938], Loss: 0.6238\n",
-      "Epoch [2/10], Step [372/938], Loss: 0.5992\n",
-      "Epoch [2/10], Step [465/938], Loss: 0.5617\n",
-      "Epoch [2/10], Step [558/938], Loss: 0.5607\n",
-      "Epoch [2/10], Step [651/938], Loss: 0.5503\n",
-      "Epoch [2/10], Step [744/938], Loss: 0.5870\n",
-      "Epoch [2/10], Step [837/938], Loss: 0.6086\n",
-      "Epoch [2/10], Step [930/938], Loss: 0.5584\n",
-      "Epoch [3/10], Step [93/938], Loss: 0.5536\n",
-      "Epoch [3/10], Step [186/938], Loss: 0.6352\n",
-      "Epoch [3/10], Step [279/938], Loss: 0.5372\n",
-      "Epoch [3/10], Step [372/938], Loss: 0.5362\n",
-      "Epoch [3/10], Step [465/938], Loss: 0.5389\n",
-      "Epoch [3/10], Step [558/938], Loss: 0.5785\n",
-      "Epoch [3/10], Step [651/938], Loss: 0.4969\n",
-      "Epoch [3/10], Step [744/938], Loss: 0.4932\n",
-      "Epoch [3/10], Step [837/938], Loss: 0.5402\n",
-      "Epoch [3/10], Step [930/938], Loss: 0.5437\n",
-      "Epoch [4/10], Step [93/938], Loss: 0.4855\n",
-      "Epoch [4/10], Step [186/938], Loss: 0.4477\n",
-      "Epoch [4/10], Step [279/938], Loss: 0.4903\n",
-      "Epoch [4/10], Step [372/938], Loss: 0.4928\n",
-      "Epoch [4/10], Step [465/938], Loss: 0.5453\n",
-      "Epoch [4/10], Step [558/938], Loss: 0.4920\n",
-      "Epoch [4/10], Step [651/938], Loss: 0.4924\n",
-      "Epoch [4/10], Step [744/938], Loss: 0.4984\n",
-      "Epoch [4/10], Step [837/938], Loss: 0.4424\n",
-      "Epoch [4/10], Step [930/938], Loss: 0.5110\n",
-      "Epoch [5/10], Step [93/938], Loss: 0.5352\n",
-      "Epoch [5/10], Step [186/938], Loss: 0.4678\n",
-      "Epoch [5/10], Step [279/938], Loss: 0.4974\n",
-      "Epoch [5/10], Step [372/938], Loss: 0.5161\n",
-      "Epoch [5/10], Step [465/938], Loss: 0.4572\n",
-      "Epoch [5/10], Step [558/938], Loss: 0.4073\n",
-      "Epoch [5/10], Step [651/938], Loss: 0.4650\n",
-      "Epoch [5/10], Step [744/938], Loss: 0.4930\n",
-      "Epoch [5/10], Step [837/938], Loss: 0.4560\n",
-      "Epoch [5/10], Step [930/938], Loss: 0.4470\n",
-      "Epoch [6/10], Step [93/938], Loss: 0.4089\n",
-      "Epoch [6/10], Step [186/938], Loss: 0.4468\n",
-      "Epoch [6/10], Step [279/938], Loss: 0.4396\n",
-      "Epoch [6/10], Step [372/938], Loss: 0.4683\n",
-      "Epoch [6/10], Step [465/938], Loss: 0.4538\n",
-      "Epoch [6/10], Step [558/938], Loss: 0.4385\n",
-      "Epoch [6/10], Step [651/938], Loss: 0.5074\n",
-      "Epoch [6/10], Step [744/938], Loss: 0.5180\n",
-      "Epoch [6/10], Step [837/938], Loss: 0.4516\n",
-      "Epoch [6/10], Step [930/938], Loss: 0.4878\n",
-      "Epoch [7/10], Step [93/938], Loss: 0.4752\n",
-      "Epoch [7/10], Step [186/938], Loss: 0.5017\n",
-      "Epoch [7/10], Step [279/938], Loss: 0.4179\n",
-      "Epoch [7/10], Step [372/938], Loss: 0.4538\n",
-      "Epoch [7/10], Step [465/938], Loss: 0.4627\n",
-      "Epoch [7/10], Step [558/938], Loss: 0.3922\n",
-      "Epoch [7/10], Step [651/938], Loss: 0.4738\n",
-      "Epoch [7/10], Step [744/938], Loss: 0.4167\n",
-      "Epoch [7/10], Step [837/938], Loss: 0.4100\n",
-      "Epoch [7/10], Step [930/938], Loss: 0.4394\n",
-      "Epoch [8/10], Step [93/938], Loss: 0.3975\n",
-      "Epoch [8/10], Step [186/938], Loss: 0.4584\n",
-      "Epoch [8/10], Step [279/938], Loss: 0.4369\n",
-      "Epoch [8/10], Step [372/938], Loss: 0.4327\n",
-      "Epoch [8/10], Step [465/938], Loss: 0.3851\n",
-      "Epoch [8/10], Step [558/938], Loss: 0.4389\n",
-      "Epoch [8/10], Step [651/938], Loss: 0.4193\n",
-      "Epoch [8/10], Step [744/938], Loss: 0.3907\n",
-      "Epoch [8/10], Step [837/938], Loss: 0.5037\n",
-      "Epoch [8/10], Step [930/938], Loss: 0.4365\n",
-      "Epoch [9/10], Step [93/938], Loss: 0.3564\n",
-      "Epoch [9/10], Step [186/938], Loss: 0.3448\n",
-      "Epoch [9/10], Step [279/938], Loss: 0.4090\n",
-      "Epoch [9/10], Step [372/938], Loss: 0.4182\n",
-      "Epoch [9/10], Step [465/938], Loss: 0.4086\n",
-      "Epoch [9/10], Step [558/938], Loss: 0.3759\n",
-      "Epoch [9/10], Step [651/938], Loss: 0.4395\n",
-      "Epoch [9/10], Step [744/938], Loss: 0.4555\n",
-      "Epoch [9/10], Step [837/938], Loss: 0.4812\n",
-      "Epoch [9/10], Step [930/938], Loss: 0.4258\n",
-      "Epoch [10/10], Step [93/938], Loss: 0.4382\n",
-      "Epoch [10/10], Step [186/938], Loss: 0.4098\n",
-      "Epoch [10/10], Step [279/938], Loss: 0.4224\n",
-      "Epoch [10/10], Step [372/938], Loss: 0.4582\n",
-      "Epoch [10/10], Step [465/938], Loss: 0.3608\n",
-      "Epoch [10/10], Step [558/938], Loss: 0.3290\n",
-      "Epoch [10/10], Step [651/938], Loss: 0.3732\n",
-      "Epoch [10/10], Step [744/938], Loss: 0.3919\n",
-      "Epoch [10/10], Step [837/938], Loss: 0.4210\n",
-      "Epoch [10/10], Step [930/938], Loss: 0.4125\n",
+      "Epoch [1/10], Step [93/938], Loss: 1.1518\n",
+      "Epoch [1/10], Step [186/938], Loss: 0.8806\n",
+      "Epoch [1/10], Step [279/938], Loss: 0.7464\n",
+      "Epoch [1/10], Step [372/938], Loss: 0.7577\n",
+      "Epoch [1/10], Step [465/938], Loss: 0.7062\n",
+      "Epoch [1/10], Step [558/938], Loss: 0.6864\n",
+      "Epoch [1/10], Step [651/938], Loss: 0.6769\n",
+      "Epoch [1/10], Step [744/938], Loss: 0.6898\n",
+      "Epoch [1/10], Step [837/938], Loss: 0.6272\n",
+      "Epoch [1/10], Step [930/938], Loss: 0.6631\n",
+      "Epoch [2/10], Step [93/938], Loss: 0.6200\n",
+      "Epoch [2/10], Step [186/938], Loss: 0.6131\n",
+      "Epoch [2/10], Step [279/938], Loss: 0.6109\n",
+      "Epoch [2/10], Step [372/938], Loss: 0.6009\n",
+      "Epoch [2/10], Step [465/938], Loss: 0.5264\n",
+      "Epoch [2/10], Step [558/938], Loss: 0.6073\n",
+      "Epoch [2/10], Step [651/938], Loss: 0.6259\n",
+      "Epoch [2/10], Step [744/938], Loss: 0.6014\n",
+      "Epoch [2/10], Step [837/938], Loss: 0.5411\n",
+      "Epoch [2/10], Step [930/938], Loss: 0.5680\n",
+      "Epoch [3/10], Step [93/938], Loss: 0.5744\n",
+      "Epoch [3/10], Step [186/938], Loss: 0.5661\n",
+      "Epoch [3/10], Step [279/938], Loss: 0.6045\n",
+      "Epoch [3/10], Step [372/938], Loss: 0.6110\n",
+      "Epoch [3/10], Step [465/938], Loss: 0.4567\n",
+      "Epoch [3/10], Step [558/938], Loss: 0.5718\n",
+      "Epoch [3/10], Step [651/938], Loss: 0.4992\n",
+      "Epoch [3/10], Step [744/938], Loss: 0.5316\n",
+      "Epoch [3/10], Step [837/938], Loss: 0.5911\n",
+      "Epoch [3/10], Step [930/938], Loss: 0.4899\n",
+      "Epoch [4/10], Step [93/938], Loss: 0.4927\n",
+      "Epoch [4/10], Step [186/938], Loss: 0.5065\n",
+      "Epoch [4/10], Step [279/938], Loss: 0.5107\n",
+      "Epoch [4/10], Step [372/938], Loss: 0.4972\n",
+      "Epoch [4/10], Step [465/938], Loss: 0.4880\n",
+      "Epoch [4/10], Step [558/938], Loss: 0.4984\n",
+      "Epoch [4/10], Step [651/938], Loss: 0.4903\n",
+      "Epoch [4/10], Step [744/938], Loss: 0.4784\n",
+      "Epoch [4/10], Step [837/938], Loss: 0.5451\n",
+      "Epoch [4/10], Step [930/938], Loss: 0.4684\n",
+      "Epoch [5/10], Step [93/938], Loss: 0.4594\n",
+      "Epoch [5/10], Step [186/938], Loss: 0.4463\n",
+      "Epoch [5/10], Step [279/938], Loss: 0.4854\n",
+      "Epoch [5/10], Step [372/938], Loss: 0.4832\n",
+      "Epoch [5/10], Step [465/938], Loss: 0.4800\n",
+      "Epoch [5/10], Step [558/938], Loss: 0.5256\n",
+      "Epoch [5/10], Step [651/938], Loss: 0.5002\n",
+      "Epoch [5/10], Step [744/938], Loss: 0.5150\n",
+      "Epoch [5/10], Step [837/938], Loss: 0.4962\n",
+      "Epoch [5/10], Step [930/938], Loss: 0.4901\n",
+      "Epoch [6/10], Step [93/938], Loss: 0.4810\n",
+      "Epoch [6/10], Step [186/938], Loss: 0.4805\n",
+      "Epoch [6/10], Step [279/938], Loss: 0.4813\n",
+      "Epoch [6/10], Step [372/938], Loss: 0.5243\n",
+      "Epoch [6/10], Step [465/938], Loss: 0.4846\n",
+      "Epoch [6/10], Step [558/938], Loss: 0.4482\n",
+      "Epoch [6/10], Step [651/938], Loss: 0.4654\n",
+      "Epoch [6/10], Step [744/938], Loss: 0.4190\n",
+      "Epoch [6/10], Step [837/938], Loss: 0.4451\n",
+      "Epoch [6/10], Step [930/938], Loss: 0.4893\n",
+      "Epoch [7/10], Step [93/938], Loss: 0.4283\n",
+      "Epoch [7/10], Step [186/938], Loss: 0.4290\n",
+      "Epoch [7/10], Step [279/938], Loss: 0.4221\n",
+      "Epoch [7/10], Step [372/938], Loss: 0.4277\n",
+      "Epoch [7/10], Step [465/938], Loss: 0.5492\n",
+      "Epoch [7/10], Step [558/938], Loss: 0.5131\n",
+      "Epoch [7/10], Step [651/938], Loss: 0.4040\n",
+      "Epoch [7/10], Step [744/938], Loss: 0.4147\n",
+      "Epoch [7/10], Step [837/938], Loss: 0.4308\n",
+      "Epoch [7/10], Step [930/938], Loss: 0.4583\n",
+      "Epoch [8/10], Step [93/938], Loss: 0.4197\n",
+      "Epoch [8/10], Step [186/938], Loss: 0.4165\n",
+      "Epoch [8/10], Step [279/938], Loss: 0.4560\n",
+      "Epoch [8/10], Step [372/938], Loss: 0.4392\n",
+      "Epoch [8/10], Step [465/938], Loss: 0.4598\n",
+      "Epoch [8/10], Step [558/938], Loss: 0.5001\n",
+      "Epoch [8/10], Step [651/938], Loss: 0.4301\n",
+      "Epoch [8/10], Step [744/938], Loss: 0.4713\n",
+      "Epoch [8/10], Step [837/938], Loss: 0.4396\n",
+      "Epoch [8/10], Step [930/938], Loss: 0.4703\n",
+      "Epoch [9/10], Step [93/938], Loss: 0.4012\n",
+      "Epoch [9/10], Step [186/938], Loss: 0.3967\n",
+      "Epoch [9/10], Step [279/938], Loss: 0.4269\n",
+      "Epoch [9/10], Step [372/938], Loss: 0.4198\n",
+      "Epoch [9/10], Step [465/938], Loss: 0.4350\n",
+      "Epoch [9/10], Step [558/938], Loss: 0.5105\n",
+      "Epoch [9/10], Step [651/938], Loss: 0.4481\n",
+      "Epoch [9/10], Step [744/938], Loss: 0.5022\n",
+      "Epoch [9/10], Step [837/938], Loss: 0.4342\n",
+      "Epoch [9/10], Step [930/938], Loss: 0.4712\n",
+      "Epoch [10/10], Step [93/938], Loss: 0.4399\n",
+      "Epoch [10/10], Step [186/938], Loss: 0.4492\n",
+      "Epoch [10/10], Step [279/938], Loss: 0.4027\n",
+      "Epoch [10/10], Step [372/938], Loss: 0.4120\n",
+      "Epoch [10/10], Step [465/938], Loss: 0.4914\n",
+      "Epoch [10/10], Step [558/938], Loss: 0.4035\n",
+      "Epoch [10/10], Step [651/938], Loss: 0.3881\n",
+      "Epoch [10/10], Step [744/938], Loss: 0.4008\n",
+      "Epoch [10/10], Step [837/938], Loss: 0.4772\n",
+      "Epoch [10/10], Step [930/938], Loss: 0.4279\n",
       "Finished Training\n"
      ]
     },
@@ -248,19 +268,19 @@
        "   (relu3): ReLU()\n",
        "   (fc2): Linear(in_features=128, out_features=10, bias=True)\n",
        " ),\n",
-       " [0.7507711902086033,\n",
-       "  0.5904432166614004,\n",
-       "  0.5447379028650997,\n",
-       "  0.48846413655035786,\n",
-       "  0.4751322006524753,\n",
-       "  0.4625004660775031,\n",
-       "  0.44451546476387394,\n",
-       "  0.42920105763748767,\n",
-       "  0.41048324169682415,\n",
-       "  0.40220269888464705])"
+       " [0.7571731960373138,\n",
+       "  0.5898372044028249,\n",
+       "  0.5497056788472987,\n",
+       "  0.49762707758845803,\n",
+       "  0.4887063187926309,\n",
+       "  0.47168447859664714,\n",
+       "  0.44837112872124607,\n",
+       "  0.4489340018481016,\n",
+       "  0.44502326543095394,\n",
+       "  0.43013564968652435])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,24 +291,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the 10000 test images: 92.40%\n",
-      "Test Loss: 0.2360\n"
+      "Accuracy of the network on the 10000 test images: 91.96%\n",
+      "Test Loss: 0.2384\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(92.4, 0.23598173260688782)"
+       "(91.96, 0.23838220536708832)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
