--- a/main_dcnn_dila.ipynb
+++ b/main_dcnn_dila.ipynb
@@ -153,30 +153,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train(model, train_loader, criterion, optimizer, epochs=10, device=torch.device(\"cpu\"), mixup=True, early_stopping=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the 10000 test images: 92.16%\n",
-      "Test Loss: 0.2469\n"
+      "Epoch [1/10], Step [93/938], Loss: 1.0395\n",
+      "Epoch [1/10], Step [186/938], Loss: 0.8168\n",
+      "Epoch [1/10], Step [279/938], Loss: 0.6984\n",
+      "Epoch [1/10], Step [372/938], Loss: 0.7255\n",
+      "Epoch [1/10], Step [465/938], Loss: 0.7116\n",
+      "Epoch [1/10], Step [558/938], Loss: 0.6684\n",
+      "Epoch [1/10], Step [651/938], Loss: 0.6507\n",
+      "Epoch [1/10], Step [744/938], Loss: 0.6628\n",
+      "Epoch [1/10], Step [837/938], Loss: 0.5987\n",
+      "Epoch [1/10], Step [930/938], Loss: 0.6432\n",
+      "Epoch [2/10], Step [93/938], Loss: 0.5849\n",
+      "Epoch [2/10], Step [186/938], Loss: 0.5814\n",
+      "Epoch [2/10], Step [279/938], Loss: 0.6034\n",
+      "Epoch [2/10], Step [372/938], Loss: 0.5855\n",
+      "Epoch [2/10], Step [465/938], Loss: 0.4963\n",
+      "Epoch [2/10], Step [558/938], Loss: 0.5772\n",
+      "Epoch [2/10], Step [651/938], Loss: 0.6075\n",
+      "Epoch [2/10], Step [744/938], Loss: 0.5814\n",
+      "Epoch [2/10], Step [837/938], Loss: 0.5100\n",
+      "Epoch [2/10], Step [930/938], Loss: 0.5534\n",
+      "Epoch [3/10], Step [93/938], Loss: 0.5652\n",
+      "Epoch [3/10], Step [186/938], Loss: 0.5409\n",
+      "Epoch [3/10], Step [279/938], Loss: 0.5709\n",
+      "Epoch [3/10], Step [372/938], Loss: 0.5943\n",
+      "Epoch [3/10], Step [465/938], Loss: 0.4601\n",
+      "Epoch [3/10], Step [558/938], Loss: 0.5565\n",
+      "Epoch [3/10], Step [651/938], Loss: 0.4612\n",
+      "Epoch [3/10], Step [744/938], Loss: 0.4937\n",
+      "Epoch [3/10], Step [837/938], Loss: 0.5693\n",
+      "Epoch [3/10], Step [930/938], Loss: 0.4727\n",
+      "Epoch [4/10], Step [93/938], Loss: 0.4781\n",
+      "Epoch [4/10], Step [186/938], Loss: 0.4749\n",
+      "Epoch [4/10], Step [279/938], Loss: 0.4899\n",
+      "Epoch [4/10], Step [372/938], Loss: 0.4841\n",
+      "Epoch [4/10], Step [465/938], Loss: 0.4712\n",
+      "Epoch [4/10], Step [558/938], Loss: 0.4959\n",
+      "Epoch [4/10], Step [651/938], Loss: 0.4822\n",
+      "Epoch [4/10], Step [744/938], Loss: 0.4642\n",
+      "Epoch [4/10], Step [837/938], Loss: 0.5195\n",
+      "Epoch [4/10], Step [930/938], Loss: 0.4601\n",
+      "Epoch [5/10], Step [93/938], Loss: 0.4375\n",
+      "Epoch [5/10], Step [186/938], Loss: 0.4432\n",
+      "Epoch [5/10], Step [279/938], Loss: 0.4811\n",
+      "Epoch [5/10], Step [372/938], Loss: 0.4882\n",
+      "Epoch [5/10], Step [465/938], Loss: 0.4459\n",
+      "Epoch [5/10], Step [558/938], Loss: 0.5031\n",
+      "Epoch [5/10], Step [651/938], Loss: 0.4815\n",
+      "Epoch [5/10], Step [744/938], Loss: 0.4957\n",
+      "Epoch [5/10], Step [837/938], Loss: 0.4786\n",
+      "Epoch [5/10], Step [930/938], Loss: 0.4710\n",
+      "Epoch [6/10], Step [93/938], Loss: 0.4645\n",
+      "Epoch [6/10], Step [186/938], Loss: 0.4634\n",
+      "Epoch [6/10], Step [279/938], Loss: 0.4598\n",
+      "Epoch [6/10], Step [372/938], Loss: 0.5023\n",
+      "Epoch [6/10], Step [465/938], Loss: 0.4768\n",
+      "Epoch [6/10], Step [558/938], Loss: 0.4303\n",
+      "Epoch [6/10], Step [651/938], Loss: 0.4582\n",
+      "Epoch [6/10], Step [744/938], Loss: 0.3970\n",
+      "Epoch [6/10], Step [837/938], Loss: 0.4551\n",
+      "Epoch [6/10], Step [930/938], Loss: 0.4792\n",
+      "Epoch [7/10], Step [93/938], Loss: 0.4191\n",
+      "Epoch [7/10], Step [186/938], Loss: 0.4158\n",
+      "Epoch [7/10], Step [279/938], Loss: 0.4156\n",
+      "Epoch [7/10], Step [372/938], Loss: 0.4295\n",
+      "Epoch [7/10], Step [465/938], Loss: 0.5333\n",
+      "Epoch [7/10], Step [558/938], Loss: 0.4970\n",
+      "Epoch [7/10], Step [651/938], Loss: 0.3976\n",
+      "Epoch [7/10], Step [744/938], Loss: 0.4054\n",
+      "Epoch [7/10], Step [837/938], Loss: 0.4213\n",
+      "Epoch [7/10], Step [930/938], Loss: 0.4519\n",
+      "Epoch [8/10], Step [93/938], Loss: 0.4222\n",
+      "Epoch [8/10], Step [186/938], Loss: 0.4057\n",
+      "Epoch [8/10], Step [279/938], Loss: 0.4515\n",
+      "Epoch [8/10], Step [372/938], Loss: 0.4265\n",
+      "Epoch [8/10], Step [465/938], Loss: 0.4591\n",
+      "Epoch [8/10], Step [558/938], Loss: 0.4801\n",
+      "Epoch [8/10], Step [651/938], Loss: 0.4042\n",
+      "Epoch [8/10], Step [744/938], Loss: 0.4549\n",
+      "Epoch [8/10], Step [837/938], Loss: 0.4178\n",
+      "Epoch [8/10], Step [930/938], Loss: 0.4604\n",
+      "Epoch [9/10], Step [93/938], Loss: 0.3886\n",
+      "Epoch [9/10], Step [186/938], Loss: 0.3986\n",
+      "Epoch [9/10], Step [279/938], Loss: 0.4187\n",
+      "Epoch [9/10], Step [372/938], Loss: 0.4240\n",
+      "Epoch [9/10], Step [465/938], Loss: 0.4133\n",
+      "Epoch [9/10], Step [558/938], Loss: 0.5112\n",
+      "Epoch [9/10], Step [651/938], Loss: 0.4294\n",
+      "Epoch [9/10], Step [744/938], Loss: 0.4755\n",
+      "Epoch [9/10], Step [837/938], Loss: 0.4137\n",
+      "Epoch [9/10], Step [930/938], Loss: 0.4757\n",
+      "Epoch [10/10], Step [93/938], Loss: 0.4271\n",
+      "Epoch [10/10], Step [186/938], Loss: 0.4247\n",
+      "Epoch [10/10], Step [279/938], Loss: 0.4125\n",
+      "Epoch [10/10], Step [372/938], Loss: 0.3994\n",
+      "Epoch [10/10], Step [465/938], Loss: 0.4702\n",
+      "Epoch [10/10], Step [558/938], Loss: 0.3978\n",
+      "Epoch [10/10], Step [651/938], Loss: 0.3885\n",
+      "Epoch [10/10], Step [744/938], Loss: 0.4052\n",
+      "Epoch [10/10], Step [837/938], Loss: 0.4624\n",
+      "Epoch [10/10], Step [930/938], Loss: 0.4217\n",
+      "Finished Training\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(92.16, 0.24688541572540998)"
+       "(DCNN(\n",
+       "   (conv1): DeformableConv2d(\n",
+       "     (offset_conv): Conv2d(1, 18, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "     (modulator_conv): Conv2d(1, 9, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "     (regular_conv): Conv2d(1, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "   )\n",
+       "   (relu1): ReLU()\n",
+       "   (pool1): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "   (conv2): DeformableConv2d(\n",
+       "     (offset_conv): Conv2d(32, 18, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "     (modulator_conv): Conv2d(32, 9, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "     (regular_conv): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "   )\n",
+       "   (relu2): ReLU()\n",
+       "   (pool2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "   (fc1): Linear(in_features=3136, out_features=128, bias=True)\n",
+       "   (relu3): ReLU()\n",
+       "   (fc2): Linear(in_features=128, out_features=10, bias=True)\n",
+       " ),\n",
+       " [0.7200804174359419,\n",
+       "  0.5670979258252867,\n",
+       "  0.5289821508866764,\n",
+       "  0.4822682872382817,\n",
+       "  0.4728679956197103,\n",
+       "  0.45877058946215776,\n",
+       "  0.4390821674985609,\n",
+       "  0.436580689397575,\n",
+       "  0.4349351472882574,\n",
+       "  0.42194668909729416])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train(model, train_loader, criterion, optimizer, epochs=10, device=torch.device(\"cpu\"), mixup=True, early_stopping=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the network on the 10000 test images: 92.79%\n",
+      "Test Loss: 0.2133\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(92.79, 0.21328076850622893)"
       ]
      },
      "execution_count": 8,
@@ -190,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
